Fix: Restrict piece movement to valid moves
Each piece can now only move in the limited
moves allowed for each respective type.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Chess</string>
     <string name="player1_lbl">Player 1</string>
     <string name="player2_lbl">Player 2</string>
+
+    <string name="invalid_move">Invalid move</string>
 </resources>
